Upgraded bootstrap to 3.0.1, rails to version 4. Added bootstrap-theme to make it look less flat.  Extracted javascript into individual files to make it easier to understand.  Todo: re-add alert modal (was used by error's from AJAX) and ajax processing code

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -70,6 +70,7 @@ en:
     no_privileges: "You don't have the privileges to perform this action"
     donating: "Can't perform this action while miner is in donation mode"
     not_applicable: "N/A"
+    miner_unavailable: "Miner is not connected"
   verb:
     delete: 'delete'
     donate: "donate"
